--- a/src/widgets/login-form/styles.scss
+++ b/src/widgets/login-form/styles.scss
@@ -2,4 +2,11 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  gap: 14px;
+}
+
+.login-error-alert {
+  width: 100%;
+  display: flex;
+  text-align: center;
 }
